@@ -171,6 +171,8 @@ SQLObject 0.9.11
 * Two bug in SQLiteConnection.columnsFromSchema() were fixed: use
   sqlmeta.idName instead of 'id'; convert default 'NULL' to None.
 
+* Use sqlmeta.idName instead of 'id' in all connection classes.
+
 SQLObject 0.9.10
 ================
 
